--- a/public/css/AddStudent.css
+++ b/public/css/AddStudent.css
@@ -96,17 +96,23 @@ html, body {
 
 
 .btn-primary{
-    background-color: #6C757D;
+    background-color:white;
     outline: none;
     width: 65%;
-    height: 40%;
     border-radius: 20px;
     border: 0px;
     box-shadow: none;
 }
 
+img
+    {
+      width: 30%;
+height: 60%;
+
+
+    }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active{
-    background-color: #495056;
+    background-color: #B0BBC5;
     outline: none !important;
     border: none !important;
      box-shadow: none;
