--- a/public/css/addvideocourse.css
+++ b/public/css/addvideocourse.css
@@ -5,7 +5,11 @@
     text-rendering: optimizeLegibility;
     -moz-osx-font-smoothing: grayscale;
 }
-
+img
+{
+width: 2cm;
+height: 2cm;
+}
 html, body
 {
     
@@ -99,20 +103,21 @@ html, body
 
 
 .btn-primary{
-    background-color: #6C757D;
+    background-color: white;
     outline: none;
     width: 65%;
-    height: 40%;
+    height: 80%;
     border-radius: 20px;
     border: 0px;
     box-shadow: none;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active{
-    background-color: #495056;
+    background-color: #B0BBC5;
     outline: none !important;
     border: none !important;
      box-shadow: none;
+     transition: 0.7s;
 }
 
 .form-content textarea {
@@ -137,7 +142,7 @@ html, body
 .form-content textarea:hover, .form-content textarea:focus {
     border: 0;
     background-color: #ebeff8;
-    color: #8D8D8D;
+    color: #B0BBC5;
 }
 
 .mv-up{
