--- a/public/css/assignments.css
+++ b/public/css/assignments.css
@@ -6,13 +6,13 @@ body{
    font-family: sans-serif;
    color:white;
    overflow-y: hidden;
-   
+   background-color: #05243A;
 }
 
 .box
 {
 overflow-y: scroll;
-background: rgb(0,0,0,0.5);
+background:black;
 width: 1000px;
 height: 500px;
 padding: 10px;
@@ -33,8 +33,10 @@ outline: none;
 color:white;
 text-align: center;
 transform: translate(30%, 0%);
-
-
+}
+img{
+   width: 30%; 
+   height: 60%; 
 }
 input[type="submit"]{
    padding: 10px;
