--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -2,6 +2,7 @@ body {
 	padding: 0;
 	margin: 0;
 	background-color:#05243A;
+	overflow-y: scroll;
 }
 .container2 {
 	position: relative;
@@ -32,6 +33,8 @@ nav .logo {
 	font-size: 24px;
 	color: #fff;
 }
+
+
 nav .links {
 	float: right;
 	padding: 0;
@@ -117,6 +120,6 @@ nav .icon-burger .line {
 }
 
 a:hover{
-	background:#05243A;
+	background-color:#05243A;
 	
 }
