--- a/public/css/removestudent.css
+++ b/public/css/removestudent.css
@@ -4,6 +4,7 @@ body{
     background-color: #05243A;
    
     font-family: sans-serif;
+    overflow-x: hidden;
     
   }
   h1{
@@ -34,14 +35,19 @@ td
 
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th { 
   background-color:#05243A;
-color:white;
-
+  color:white;
 
 }
 .table{
   margin-top:20px;
 } 
+img
+    {
+      width: 30%;
+height: 60%;
 
+
+    }
 .r input[type="submit"]
 {
   border:none;
@@ -73,6 +79,6 @@ a{
 }
 
 a:hover{
-  background-color:white;
-  color:#4A99E0;
+  background-color:#05243A;
+  color:white;
 }
