--- a/public/css/rm.css
+++ b/public/css/rm.css
@@ -12,10 +12,11 @@ body{
 .mes{
  
   text-align: center;
-  transform: translate(0%, 200%);
+  transform: translate(0%, 100%);
   color: white;
   font-style: bold;
   text-decoration: underline;
+  background-color: black;
 }
 a{
   text-decoration: none;
@@ -27,4 +28,10 @@ h1{
   text-align: center; 
   font-size:50px;
 }
-    
+    img
+    {
+      width: 30%;
+height: 60%;
+
+
+    }
