--- a/public/css/updateVid.css
+++ b/public/css/updateVid.css
@@ -1,16 +1,21 @@
-img
-    {
+img{
       width: 30%;
-height: 60%;
-
-
-    }
-  body
-  {
+      height: 60%;
+}
+  body{
     background-color: #05243A;
-    color: white;
-
+    color: white;  
+  }
+  .register{
+    transform: translate(0%, 80%);
   }
   a{
       color: #6CB9FF;
+  }
+  .comp{
+    background-color: black;
+    text-align: center;
+  }
+  .container{
+    transform: translate(0%, -180%);
   }
