--- a/public/css/updateVid.css
+++ b/public/css/updateVid.css
@@ -1,21 +1,35 @@
-img{
-      width: 30%;
-      height: 60%;
+body{
+    margin: 0;
+    padding: 0;
+   color: white;
+    background-size: cover;
+    font-family: sans-serif;
+    background-color:#05243A;;
+  }
+
+.register
+{
+background-color: black;
+color:#fff;
+background-position: center; 
+top:50%;
+left: 50%;
+right: 50%;
+transform: translate(0%,3%);
+ padding: 3px 30px;
+ text-align: center;
 }
-  body{
-    background-color: #05243A;
-    color: white;  
-  }
-  .register{
-    transform: translate(0%, 80%);
-  }
-  a{
-      color: #6CB9FF;
-  }
-  .comp{
-    background-color: black;
-    text-align: center;
-  }
-  .container{
-    transform: translate(0%, -180%);
-  }
+
+h2{
+margin: 10;
+padding: 10;
+text-align: center;
+font-size:22px;
+}
+
+ img{
+       width: 2cm;
+       height: 2cm;
+   }
+
+   
